--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "csvtojson": "^2.0.10",
     "fs-extra": "^10.1.0",
-    "handlebars": "^4.7.7",
-    "nodemailer": "^6.7.6"
+    "handlebars": "^4.7.7"
   }
 }
